# rf5tg6yh7uji

./: .gitignore  CMakeLists.txt  about.md  build-and.txt  build-ios.txt  build-logs.txt  build-win.txt  crashlog.log:Zone.Identifier  log.log:Zone.Identifier  mod.json  support.md
.forgejo/workflows/: geode.yml
.github/workflows/: build.yml
lib/tabby/include/util/: config.hpp
lib/tabby/lib/imgui_lib/: imgui.cpp  imgui_widgets.cpp
lib/tabby/lib/imgui_lib/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.h
lib/tabby/src/widgets/: button.cpp  window.cpp
nat-converter-main/: README.md
nat-converter-main/src/: lib.rs
nat-converter-main/www/src/components/: ReplayView.svelte  SettingsMenu.svelte
resources/img/: logo.png:Zone.Identifier
src/: main.cpp
src/assist/: autoclicker.cpp  autoclicker.hpp  hitboxes.cpp  hitboxes.hpp
src/bot/: bot.cpp  bot.hpp  updater.cpp  updater.hpp
src/checkpoint/: checkpoint.cpp  checkpoint.hpp  fix.cpp  fix.hpp
src/config/: config.hpp
src/engine/: clock.cpp  clock.hpp  engine.cpp  engine.hpp  timeline.cpp  timeline.hpp
src/hooks/: CCActionManager.cpp  CCDirector.cpp  CCScheduler.cpp  EditorPauseLayer.cpp  EndLevelLayer.cpp  EnhancedGameObject.cpp  FMODAudioEngine.cpp  GJBaseGameLayer.cpp  GJEffectManager.cpp  GameObject.cpp  LevelEditorLayer.cpp  PauseLayer.cpp  PlayLayer.cpp  PlayerObject.cpp  ShaderLayer.cpp  VideoOptionsLayer.cpp
src/label/: label.cpp
src/physics/: collisions.cpp  collisions.hpp  gjbasegamelayer.cpp  gjbasegamelayer.hpp  gravity.cpp  gravity.hpp  object.cpp  object.hpp  player.cpp  player.hpp
src/render/: dsp.cpp  dsp.hpp  ffmpeg.hpp  gl.hpp  ios_video_writer.hpp  ios_video_writer.mm  mobile_ffmpeg_api.hpp  pass.cpp  pass.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/render/colorspace/: nv12.hpp  yuv420p.hpp
src/replay/: macro.cpp  macro.hpp  replay.hpp  system.cpp  system.hpp
src/settings/: settings.hpp
src/shared/: keys.hpp  memory.hpp
src/shared/value/: keybind.hpp  value.hpp
src/trajectory/: trajectory.cpp  trajectory.hpp
src/ui/: hook.cpp  hook.hpp  imgui_helpers.hpp  manager.cpp  manager.hpp  mobile_menu.cpp  mobile_menu.hpp  state.hpp  theme.cpp  touch_overlay.cpp  touch_overlay.hpp
src/ui/widgets/: drawable.hpp  image.hpp  tab.hpp  window.hpp
src/util/: crash_log.cpp  crash_log.hpp  file.hpp  midhook.cpp  midhook.hpp  paths.hpp  storage.hpp  try.hpp
